--- a/accordion.html
+++ b/accordion.html
@@ -15,39 +15,109 @@
 	<body>
 		<div class="accordion-container">
 			<div class="accordion">
-				<div class="accordion-header">
-					<p class="accordion-number">02</p>
-					<p class="accordion-title">How long do I have to return my chair ?</p>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon"
-						fill="none"
-						viewBox="0 0 24 24"
-						stroke="currentColor"
-						stroke-width="2"
-					>
-						<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-					</svg>
+				<p class="accordion-number">01</p>
+				<p class="accordion-title">Where are these chairs assembled? ?</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="icon"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+				</svg>
+				<div class="hidden-box">
+					<p class="accordion-para">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut assumenda cum
+						commodi alias architecto doloremque. Ducimus, fugit fuga! Debitis quis vitae
+						aperiam quasi a blanditiis porro ad! Tempore, possimus praesentium.
+					</p>
+					<ul class="accordion-item">
+						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+						<li>
+							Incidunt saepe libero reprehenderit suscipit optio quam, magnam aliquam.
+						</li>
+						<li>
+							Sed delectus! Explicabo blanditiis, reprehenderit suscipit maiores optio
+							numquam eum.
+						</li>
+						<li>
+							Ducimus, fugit fuga! Debitis quis vitae aperiam quasi a blanditiis porro ad!
+							Tempore, possimus praesentium.
+						</li>
+					</ul>
 				</div>
-				<p class="accordion-para">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut assumenda cum
-					commodi alias architecto doloremque. Ducimus, fugit fuga! Debitis quis vitae
-					aperiam quasi a blanditiis porro ad! Tempore, possimus praesentium.
-				</p>
-				<ul class="accordion-item">
-					<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-					<li>
-						Incidunt saepe libero reprehenderit suscipit optio quam, magnam aliquam.
-					</li>
-					<li>
-						Sed delectus! Explicabo blanditiis, reprehenderit suscipit maiores optio
-						numquam eum.
-					</li>
-					<li>
-						Ducimus, fugit fuga! Debitis quis vitae aperiam quasi a blanditiis porro ad!
-						Tempore, possimus praesentium.
-					</li>
-				</ul>
+			</div>
+      <div class="accordion open">
+				<p class="accordion-number">02</p>
+				<p class="accordion-title">How long do I have to return my chair ?</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="icon"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+				</svg>
+				<div class="hidden-box">
+					<p class="accordion-para">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut assumenda cum
+						commodi alias architecto doloremque. Ducimus, fugit fuga! Debitis quis vitae
+						aperiam quasi a blanditiis porro ad! Tempore, possimus praesentium.
+					</p>
+					<ul class="accordion-item">
+						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+						<li>
+							Incidunt saepe libero reprehenderit suscipit optio quam, magnam aliquam.
+						</li>
+						<li>
+							Sed delectus! Explicabo blanditiis, reprehenderit suscipit maiores optio
+							numquam eum.
+						</li>
+						<li>
+							Ducimus, fugit fuga! Debitis quis vitae aperiam quasi a blanditiis porro ad!
+							Tempore, possimus praesentium.
+						</li>
+					</ul>
+				</div>
+			</div>
+      <div class="accordion">
+				<p class="accordion-number">03</p>
+				<p class="accordion-title">Do you ship to countries outsite EU?</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="icon"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+				</svg>
+				<div class="hidden-box">
+					<p class="accordion-para">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut assumenda cum
+						commodi alias architecto doloremque. Ducimus, fugit fuga! Debitis quis vitae
+						aperiam quasi a blanditiis porro ad! Tempore, possimus praesentium.
+					</p>
+					<ul class="accordion-item">
+						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+						<li>
+							Incidunt saepe libero reprehenderit suscipit optio quam, magnam aliquam.
+						</li>
+						<li>
+							Sed delectus! Explicabo blanditiis, reprehenderit suscipit maiores optio
+							numquam eum.
+						</li>
+						<li>
+							Ducimus, fugit fuga! Debitis quis vitae aperiam quasi a blanditiis porro ad!
+							Tempore, possimus praesentium.
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</body>
