--- a/accordion.html
+++ b/accordion.html
@@ -10,7 +10,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="/css/accordion.css" />
-		<title>Accordion</title>
+		<title>Accordion Component</title>
 	</head>
 	<body>
 		<div class="accordion-container">
