--- a/carousel.html
+++ b/carousel.html
@@ -23,7 +23,7 @@
 				<p class="author">Maria Singh</p>
 				<p class="degination">Software Engineer at ABC</p>
 			</blockquote>
-			<button class="btn-left">
+			<button class="btn btn-left">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					class="btn-icon"
@@ -35,7 +35,7 @@
 					<path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
 				</svg>
 			</button>
-			<button class="btn-right">
+			<button class="btn btn-right">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					class="btn-icon"
@@ -47,6 +47,12 @@
 					<path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
 				</svg>
 			</button>
+			<div class="dots">
+				<button class="dot active">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+			</div>
 		</div>
 	</body>
 </html>
