--- a/app-layout.html
+++ b/app-layout.html
@@ -10,18 +10,13 @@
 	<body>
 		<nav>Nav</nav>
 		<menu>
-			<div class="menu-container">
-				<div class="email-option">
-					<div>New</div>
-					<div>Reply</div>
-					<div>Forward</div>
-					<div>Mark as Read</div>
-					<div>Mark as UnRead</div>
-				</div>
-				<div>Trash</div>
-			</div>
+			<div>New</div>
+			<div>Reply</div>
+			<div>Forward</div>
+			<div>Mark as Read</div>
+			<div>Trash</div>
 		</menu>
-		<main>
+		<section>
 			<div class="emails">Email 1</div>
 			<div class="emails">Email 2</div>
 			<div class="emails">Email 3</div>
@@ -33,8 +28,8 @@
 			<div class="emails">Email 9</div>
 			<div class="emails">Email 10</div>
 			<div class="emails">Email 11</div>
-		</main>
-		<section>Email View</section>
+		</section>
+		<main>Email View</main>
 		<aside>Additional Info</aside>
 	</body>
 </html>
